--- a/src/assets/CSS/comments/comment.less
+++ b/src/assets/CSS/comments/comment.less
@@ -114,11 +114,12 @@
                         margin: 1% 0;
                         >div{
                             .info{
-                                width: 310px;
+                                width: 280px;
                                 display: flex;
-                                justify-content: space-between;
+                                // justify-content: space-between;
                                 align-items: center;
                                 span{
+                                    margin: 0 1%;
                                     display: inline-block;
                                 }
                                 >span:nth-of-type(1) {
@@ -132,14 +133,6 @@
                                 }
                                 >span:nth-of-type(2) {
                                     color: pink;
-                                }
-                                >span:nth-of-type(4) {
-                                    img{
-                                        display: block;
-                                        width:50px;
-                                        height:50px;
-                                        border-radius: 50%;
-                                    }
                                 }
                                 >span:nth-of-type(5) {
                                     color: orange;
