完成了所有开发

--- a/src/assets/CSS/Register/register.less
+++ b/src/assets/CSS/Register/register.less
@@ -3,7 +3,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: scroll;
     background-color: #f9f9f9;
 }
 
@@ -18,14 +18,15 @@
 }
 
 .main_body .header_title {
+    margin-top: 2%;
     font-size: 15px;
     display: flex;
     justify-content: center;
 }
 
 .main_body .contaienr {
-    width: 544px;
-    height: auto;
+    max-width: 544px;
+    max-height: 694px;
     margin: 0% auto;
 }
 
