完成了打包压缩

--- a/src/assets/CSS/Box.less
+++ b/src/assets/CSS/Box.less
@@ -9,6 +9,7 @@
       display: flex;
       margin:  0 auto;
       width: 80%;
+      min-width: 400px;
       height: 15%;
       position: relative;
       justify-content: space-between;
